@@ -1,0 +1,5 @@
+local combat_robot_ammo = require("prototypes.ammo.combat_robot_ammo")
+
+local depleted_uranium_defender_ammo = {}
+combat_robot_ammo.create_all_prototypes(depleted_uranium_defender_ammo, "", 1)
+return depleted_uranium_defender_ammo
