@@ -1,0 +1,5 @@
+local reusable_robots = require("compatibilities.reusable_robots")
+
+if mods["Reusable_Robots"] then
+    reusable_robots.ensure_compatibility()
+end
