@@ -5,5 +5,5 @@
     "description": "Introduce a turret that fires capsules (slowdown, poison, and combat robots) for strategic base defense.",
     "author": "22",
     "factorio_version": "2.0",
-    "dependencies": ["base >= 2.0", "space-age", "? useful-slowdown-capsules"]
+    "dependencies": ["base >= 2.0", "space-age", "? useful-slowdown-capsules", "? Reusable_Robots"]
 }
